# requestez

./: LICENSE.txt  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: publish-on-push.yml
requestez/: __init__.py  base.py
requestez/asynchronous/: __init__.py
requestez/encryption/: __init__.py  dejuice.py  unpack.py
requestez/helpers/: __init__.py  logger.py  merge.py  progress_bar.py
requestez/kurl/: __init__.py
requestez/parsers/: __init__.py
test/: requestez_logging.py  test_log.py
tests/: test_logging_manual.py  test_sessions.py
